@@ -109,6 +109,7 @@
 		    "MACRO-FUNCTION"
 		    "MACROEXPAND" "MACROEXPAND-1" "*MACROEXPAND-HOOK*"
 		    "MAKE-LOAD-FORM"
+		    "MAKE-LOAD-FORM-SAVING-SLOTS"
 		    "PACKAGE" "PACKAGEP"
 		    "PROCLAIM"
 		    "SPECIAL-OPERATOR-P"
